sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:7: error: not enough arguments for method plusPetit: (x$1: Int, x$2: Int)Boolean.
Unspecified value parameter x$2.
    if (plusPetit(min>min+1)) {
                 ^