sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var min = 0
  var fini = false
	while (!fini) {
    fini=true
    if (plusPetit(min>min+1)) {
      min=min+1
      fini=false
    }
  }
}